incorporated hvacengi's review comments.

--- a/doc/source/_static/css/kos_theme.css
+++ b/doc/source/_static/css/kos_theme.css
@@ -13,13 +13,7 @@
 .k { color:#042; } /*keywords*/
 .o { color:#024; } /*operators*/
 
-/* :struct: links were appearing as black text and didn't look
- * at all like links.  This says that any border element put
- * inside a link should share the link's blue color, thus
- * the :struct: boxes are blue'ed when they are in a link, and
- * default (black) when they are not links.
- */
-.a { border-color: #2980B9; }
+a.reference span.pre { color: #2980B9; }
 
 /* It is possible to do a lot more here, but let's
  * leave it at that for now.
